--- a/source/MainWindow.xaml
+++ b/source/MainWindow.xaml
@@ -8,25 +8,25 @@
         Title="Lenovo Controller" SizeToContent="WidthAndHeight" ResizeMode="CanMinimize" x:Name="mainWindow"
         FontSize="14">
     <StackPanel Margin="25">
-        <StackPanel Orientation="Horizontal" Margin="10">
-            <TextBlock>Current charge:&#160;</TextBlock>
-            <TextBlock Name="ChargeState">69</TextBlock>
-            <TextBlock>%</TextBlock>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="10">
+        <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock>Charge to:&#160;</TextBlock>
             <TextBox Name="ChargeGoal" Text="80" TextAlignment="Right"></TextBox>
             <TextBlock>%</TextBlock>
         </StackPanel>
-        <GroupBox Header="Charging mode" Margin="10" Name="RadioGroupMode">
+        <GroupBox Header="Charging mode" Margin="5" Name="RadioGroupMode" IsEnabled="False">
             <StackPanel>
                 <RadioButton IsChecked="True" Name="RadioNormal" Content="Normal"/>
                 <RadioButton Content="Rapid" Name="RadioRapid"/>
             </StackPanel>
         </GroupBox>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Margin="5">
             <TextBlock>Status:&#160;</TextBlock>
             <TextBlock Name="Status">Idle</TextBlock>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="5">
+            <TextBlock>Current charge:&#160;</TextBlock>
+            <TextBlock Name="ChargeState">69</TextBlock>
+            <TextBlock>%</TextBlock>
         </StackPanel>
         <Button Name="StartStop" Click="OnStartStop">Start</Button>
     </StackPanel>
